# assistant

./: README.md  pyproject.toml  ДЗ11_ГАС.ipynb  ДЗ1_ПІБ
.github/workflows/: lint.yml
assistant/: __init__.py
tests/: test_assistant_bot.py
