[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assistant"]

[project]
name = "assistant"
version = "0.1.0"
authors = [
    { name = "John Doe", email = "john@doe.com" },
]
description = "Personal assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]